implemented alumni details page

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -323,6 +323,15 @@
                         </li>
 
                         <li class="sidebar-item">
+                            <a class="sidebar-link {% block alumni_active %} {% endblock %}" href="{% url 'alumni_management' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-star"></i>
+                                </span>
+                                <span class="hide-menu">Alumni & Referrals</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
                             <a class="sidebar-link" href="{% url 'administrator_feedbacks' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-list"></i>
